[project]
name = "watermark-detection"
description = "This custom node for ComfyUI provides watermark detection capabilities using a YOLO model trained by [a/fancyfeast](https://huggingface.co/fancyfeast), the creator of JoyCaption. The model is originally hosted at [a/Hugging Face Space](https://huggingface.co/spaces/fancyfeast/joycaption-watermark-detection)."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lrzjason/ComfyUI-watermark-detection"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lrzjason"
DisplayName = "ComfyUI-watermark-detection"
Icon = ""
